k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress # Um nome para o Ingress de todas as APIs
  annotations:
    kubernetes.io/ingress.global-static-ip-name: tcc-erp.zapto.org
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: tcc-certificate
spec:
  rules:
  - host: tcc-erp.zapto.org
    http:
      paths:
        - path: /api/auth
          pathType: Prefix
          backend:
            service:
              name: auth-service
              port:
                number: 5000
        - path: /api/inventory
          pathType: Prefix
          backend:
            service:
              name: inventory-service
              port:
                number: 5000
        - path: /api/sales
          pathType: Prefix
          backend:
            service:
              name: sales-service
              port:
                number: 5000
        - path: /api/customers
          pathType: Prefix
          backend:
            service:
              name: customer-service
              port:
                number: 5000
        - path: /api/employees
          pathType: Prefix
          backend:
            service:
              name: hr-service
              port:
                number: 5000
  tls:
  - hosts:
    - tcc-erp.zapto.org
